Using vcpkg for package managing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.5)
+
+set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake"
+    CACHE STRING "Vcpkg toolchain file")
+
 project(sift3d)
 set(CMAKE_CXX_STANDARD 17)
 
-set(PCL_DIR ./lib/pcl/share/pcl-1.14/)
 find_package(PCL REQUIRED)
 if(PCL_FOUND)
     include_directories(${PCL_INCLUDE_DIRS})
@@ -17,7 +20,27 @@ else()
     message(FATAL_ERROR "Python3 headers not found")
 endif()
 
-execute_process(COMMAND ${Python3_EXECUTABLE} -c "import numpy; print(numpy.get_include())"
+execute_process(
+    COMMAND ${Python3_EXECUTABLE} -m ensurepip
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+
+execute_process(
+    COMMAND ${Python3_EXECUTABLE} -m pip install numpy
+    OUTPUT_VARIABLE pip_output
+    ERROR_VARIABLE pip_error
+    RESULT_VARIABLE pip_result
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+
+if(pip_result EQUAL 0)
+    message(STATUS "Successfully installed NumPy: ${pip_output}")
+else()
+    message(FATAL_ERROR "Failed to install NumPy: ${pip_error}")
+endif()
+
+execute_process(
+    COMMAND ${Python3_EXECUTABLE} -c "import numpy; print(numpy.get_include())"
     OUTPUT_VARIABLE Python3NumPy_INCLUDE_DIRS
     OUTPUT_STRIP_TRAILING_WHITESPACE
     RESULT_VARIABLE Python3NumPy_NOT_FOUND
@@ -39,8 +62,8 @@ target_include_directories(sift3d PRIVATE
 )
 
 target_link_libraries(sift3d PRIVATE
-    ${Python3_LIBRARIES}
-    ${PCL_LIBS}
+    Python3::Python
+    ${PCL_LIBRARIES}
 )
 
 set_target_properties(sift3d PROPERTIES
