--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "include/pcl"]
-	path = include/pcl
-	url = git@github.com:PointCloudLibrary/pcl.git
+[submodule "vcpkg"]
+	path = vcpkg
+	url = https://github.com/microsoft/vcpkg
